# qDisk

./: .gitignore  README.md  analysis_12CO.ipynb  analysis_C18O.ipynb  analysis_SO.ipynb  cmap_freeze.txt  eDisk_source_dict.py  eDiskplot.py  fit_cont_image.py  generate_momentmaps.py  moment_maps.py  plot_channel_maps.py  pyproject.toml  radial_profile_example.py  radial_profile_old.py  radial_profiles.py  subimage_12CO.py  test.ipynb  test_mom0_clip.py  test_mom0_voxel_selection.py  test_rotation_map_method.ipynb  test_rotation_map_method.py  utils.py
qdisk/: classes.py  data_product.py  fit.py  model.py  plot.py  product.py  statistics.py  utils.py
tests/: test_qdisk.py
