[tool.poetry]
name = "qDisk"
version = "0.1.0"
description = ""
authors = ["yyamato-as <yyamato.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
astropy = "^5.0.4"
matplotlib = "^3.5.2"
bettermoments = "^1.6.3"
ipython = "^8.3.0"
dask = {extras = ["complete"], version = "^2022.5.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
