[tool.poetry]
name = "qDisk"
version = "0.1.0"
description = ""
authors = ["yyamato-as <yyamato.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "<2.0"
scipy = "^1.8.0"
astropy = "^6.0.0"
matplotlib = "^3.5.2,<3.8"
bettermoments = "^1.6.3"
ipython = "^8.3.0"
casatasks = "^6.4.4"
casatools = "^6.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"
ipympl = "^0.9.1"
nbconvert = "^6.5.0"
pandoc = "^2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
